Further fix styling. Fix several issues in components, styling, alignment, logic. Set current event after creating new event

--- a/src/components/styles/TodoWidget.css
+++ b/src/components/styles/TodoWidget.css
@@ -36,3 +36,8 @@
 .svg-img {
   cursor:pointer;
 }
+
+.svg-button {
+  border:none;
+  background-color:white;
+}
